# finam

./: .gitignore  .gitlab-ci.yml  .zenodo.json  AUTHORS.md  CHANGELOG.md  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  setup.cfg
benchmarks/: README.md  pstats_to_csv.py  run_profiling.sh
benchmarks/adapters/: test_regrid.py
benchmarks/data/: test_grids.py  test_tools.py
benchmarks/numpy/: test_save_load.py
benchmarks/profiling/: mem_huge_memory.py  profile_huge_memory.py  profile_numpy.py  simple_numpy.py  simple_run.py  simple_xarray.py
benchmarks/run/: test_run.py
benchmarks/sdk/: test_io.py
docs/: conf.py  contents.rst  index.rst
docs/_static/: custom.css
docs/source/: conf.py  index.md
docs/source/_static/css/: custom.css
docs/source/_templates/autosummary/: class.rst
docs/source/_templates/blog/: archives.html  categories.html  postcard-inner.html  postcard.html  recentposts.html  tagcloud.html
docs/source/about/: authors.rst  index.rst  license.rst
docs/source/api/: adapters.rst  data.rst  index.rst  interfaces.rst  modules.rst  schedule.rst  sdk.rst  tools.rst
docs/source/api/plots/: integration-methods.py  interpolation-methods.py
docs/source/blog/: index.rst
docs/source/blog/posts/: dead-link-error.rst  documentation-rework.rst  model-code-changes-for-coupling.rst  post-1.rst  release-0-4-0.rst  release-0-5-0.rst  release-1-0-0.rst  time-adapters.rst
docs/source/finam-book/: about.md  about.rst  index.rst  quickstart.rst
docs/source/finam-book/cookbook/: index.rst
docs/source/finam-book/development/: adapters.md  adapters.rst  components.md  components.rst  connect_phase.md  connect_phase.rst  data_metadata.md  data_metadata.rst  index.rst  interfaces.md  interfaces.rst  logging.rst  model_wrapping.rst  performance.rst  py-bindings.md  py-bindings.rst  special_components.rst
docs/source/finam-book/principles/: components_adapters.md  components_adapters.rst  coupling_scheduling.rst  data_flow.md  data_flow.rst  index.md  index.rst  metadata.rst
docs/source/finam-book/usage/: components_adapters.rst  coupling_scripts.rst  index.md  index.rst  installation.md  installation.rst  known_modules.rst
examples/: formind_mpi_test.py  live_view.py  mhm_fm_minimal.py  mhm_ogs_fm.py
examples/dummy_models/: formind.py  mhm.py  ogs.py
finam/: __init__.py  abstracts.py  adapters.py  formind_mpi_test.py  interfaces.py  live_view.py  mhm-ogs-fm.py  mhm_ogs_fm.py  mpi_test.py  schedule.py  sdk.py  test.py
finam/adapters/: __init__.py  base.py  probe.py  test_base.py  test_time.py  time.py
finam/adapters/_test/: test_probe.py
finam/core/: __init__.py  interfaces.py  schedule.py  sdk.py  test_sdk.py
finam/core/_test/: test_schedule.py  test_sdk.py
finam/data/: __init__.py  grid.py  test_grid.py
finam/data/_test/: test_grid.py
finam/models/: __init__.py  formind.py  formind_mpi.py  formind_simple.py  mhm.py  ogs.py  random_output.py
finam/models/_test/: test_formind.py
finam/modules/: __init__.py  csv_printer.py  csv_writer.py  generators.py  grid_view.py  random_output.py  readers.py  schedule_view.py  time_series_view.py  writers.py
finam/modules/_test/: test_csv_reader.py
finam/modules/visual/: __init__.py  schedule.py  time_series.py
formind/: .gitignore  formind.pxd  formind.pyx  setup.py  test.py
formind/cpp/: formind.cpp  formind.h
formind/formind_parameters/: beech_forest.par  beech_forest.pin
src/finam/: __init__.py  errors.py  interfaces.py  live_view.py  schedule.py
src/finam/adapters/: __init__.py  base.py  mask.py  masking.py  probe.py  regrid.py  stats.py  time.py  time_integration.py  units.py
src/finam/adapters/_test/: test_base.py  test_time.py
src/finam/components/: callback.py  control.py  debug.py  generators.py  mergers.py  noise.py  parametric.py  readers.py  writers.py
src/finam/core/: __init__.py  interfaces.py  mpi.py  schedule.py  sdk.py
src/finam/core/_test/: test_schedule.py  test_sdk.py
src/finam/core/sdk/: adapter.py  component.py  input.py  output.py
src/finam/data/: __init__.py  cf_units.py  esri_tools.py  grid.py  grid_base.py  grid_spec.py  grid_tools.py  tools.py
src/finam/data/tools/: __init__.py  core.py  info.py  mask.py  units.py
src/finam/models/: formind_mpi.py  formind_simple.py  mhm.py  ogs.py
src/finam/modules/: __init__.py  callback.py  control.py  debug.py  generators.py  mergers.py  noise.py  parametric.py  readers.py  writers.py
src/finam/modules/visual/: __init__.py  grid.py  schedule.py  time_series.py
src/finam/sdk/: __init__.py  adapter.py  component.py  input.py  output.py
src/finam/tools/: __init__.py  connect_helper.py  cwd_helper.py  date_helper.py  enum_helper.py  inspect_helper.py  io_helper.py  log_helper.py  wurlitzer.py
src/formind/formind_parameters/Climate/: climate_30yrs.txt
tests/adapters/: test_base.py  test_mask.py  test_masking.py  test_probe.py  test_regrid.py  test_regrid_mask.py  test_stats.py  test_time.py  test_time_integration.py  test_units.py
tests/adapters/square_5x4/: cells.txt  points.txt  types.txt
tests/components/: test_callback.py  test_control.py  test_csv_writer.py  test_debug.py  test_generator.py  test_noise.py  test_parametric.py  test_simplex_noise.py  test_weighted_sum.py
tests/core/: test_propagate_info.py  test_pull_based_component.py  test_schedule.py  test_sdk.py  test_units.py
tests/data/: test_cf_units.py  test_grid.py  test_grid_spec.py  test_grid_tools.py  test_masked.py  test_tools.py
tests/models/: test_formind.py
tests/modules/: test_callback.py  test_control.py  test_csv_reader.py  test_csv_writer.py  test_debug.py  test_generator.py  test_noise.py  test_parametric.py  test_simplex_noise.py  test_weighted_sum.py
tests/modules/visual/: test_schedule_view.py  test_time_series_view.py
tests/tools/: test_connect.py  test_cwd.py  test_inspect.py  test_log.py
