[metadata]
name = finam
description = finam is not a model.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.ufz.de/FINAM/finam
author = FINAM Developers
author_email = finam@ufz.de
maintainer = FINAM Developers
maintainer_email = finam@ufz.de
license = LGPLv3
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
project_urls =
    Documentation = https://FINAM.pages.ufz.de/finam/
    Source = https://git.ufz.de/FINAM/finam
    Tracker = https://git.ufz.de/FINAM/finam/-/issues
    Changelog = https://git.ufz.de/FINAM/finam/-/blob/main/finam/CHANGELOG.md

[options]
package_dir =
    = src
packages = find:
install_requires =
    matplotlib>=3
    numpy>=1.14.5
    scipy>=1.9.0
    pyevtk>=1.1.1
    xarray>=2022.03
    pint>=0.19.0
    pint_xarray>=0.3.0
    cf_xarray>=0.7.4
    pyproj>=3.4
    pandas>=1.3
python_requires = >=3.8
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
doc =
    sphinx>=5
    numpydoc>=1.1
    sphinx-design>=0.3
    myst-parser>=0.18
    docutils>=0.18  # mdinclude with myst
test =
    pytest-cov>=3
